# RentPulse

./: .env.example  .gitignore  README.md  TASKS.md  pyproject.toml  requirements-airflow.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: rentpulse_daily_pipeline.py
athena/: create_raw_records_table.sql  validation_queries.sql
config/: sources.json
data/sample/: listing_snapshots.csv
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/marts/: dim_listings.sql  dim_neighborhoods.sql  fct_listing_history.sql  fct_rent_trends.sql  mart_affordability.sql  mart_development_activity.sql  mart_inventory_churn.sql  mart_neighborhood_scorecard.sql  mart_transit_price_effect.sql  schema.yml
docs/: ARCHITECTURE.md
iam/: rentpulse-user-policy.json
quicksight/: dashboard_manifest.json
rent_pulse/: __init__.py  __main__.py  cli.py  config.py  records.py
rent_pulse/aws/: __init__.py  athena.py  glue_catalog.py  quicksight.py
rent_pulse/ingestion/: __init__.py  fetchers.py  jobs.py  parser.py
rent_pulse/storage/: __init__.py  postgres.py  s3.py
rent_pulse/warehouse/: __init__.py  dbt_cloud.py  snowflake.py
scripts/: bootstrap_aws.sh  bootstrap_postgres.py  bootstrap_snowflake.py  run_athena_validations.py  run_ingestion.py  setup_quicksight.py  sync_glue_catalog.py  trigger_dbt_cloud.py
snowflake/: copy_raw_records.sql
snowflake/ddl/: 001_database_and_schemas.sql  002_raw_objects.sql
sql/postgres/: 001_staging_schema.sql
tests/: __init__.py  test_athena.py  test_config.py  test_parser.py  test_records.py
(+7 files in other folders)
