[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rentpulse"
version = "0.1.0"
description = "Public housing intelligence data platform using Python, S3, Glue, Athena, Snowflake, dbt Cloud, Airflow, QuickSight, and Postgres."
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "boto3>=1.34.0",
  "psycopg2-binary>=2.9.9",
  "snowflake-connector-python>=3.10.0",
  "python-dotenv>=1.0.0"
]

[project.scripts]
rentpulse = "rent_pulse.cli:main"

[tool.setuptools.packages.find]
include = ["rent_pulse*"]
